[gd_scene load_steps=6 format=3 uid="uid://5vdpr2nj1l16"]

[ext_resource type="Script" uid="uid://bcc7ryqivt64d" path="res://scenes/scripts/InputTextDisplay.gd" id="1_oqbl5"]
[ext_resource type="PackedScene" uid="uid://bytw8x327a2uj" path="res://addons/jam_essentials/scenes/ui/InputDisplay.tscn" id="2_tjr2p"]
[ext_resource type="Texture2D" uid="uid://biqemmwkbjpfa" path="res://addons/jam_essentials/resources/kenney/Keyboard & Mouse/Default/keyboard_question.png" id="3_p81ee"]
[ext_resource type="PackedScene" uid="uid://bfcunsevfo48a" path="res://addons/jam_essentials/scenes/ui/LocalizableLabel.tscn" id="4_t5tik"]
[ext_resource type="Theme" uid="uid://cyuafkmqgdlvi" path="res://addons/jam_essentials/resources/themes/GeneralUI.tres" id="5_uy46e"]

[node name="InputTextDisplay" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_oqbl5")

[node name="InputDisplay" parent="." instance=ExtResource("2_tjr2p")]
layout_mode = 2
texture = ExtResource("3_p81ee")
action = ""

[node name="LocalizableLabel" parent="." instance=ExtResource("4_t5tik")]
layout_mode = 2
theme = ExtResource("5_uy46e")
theme_override_colors/font_color = Color(1, 1, 1, 1)
